added relevant comments to the js on quiz

--- a/Pages/Overview.html
+++ b/Pages/Overview.html
@@ -158,6 +158,6 @@
         </div>
         <script src="../JavaScript/script.js"></script>
         <script src="../JavaScript/quiz.js"></script>
-
+</div>
 </body>
 </html>
