--- a/Pages/AboutUs.html
+++ b/Pages/AboutUs.html
@@ -89,6 +89,28 @@
                                     it
                                     together!
                                 </p>
+                                <h2>Responsibilities</h2>
+                                <h3>Pages and related CSS/JS</h3>
+                                <p>
+                                    <br>Home: The Home page is the primary entry point for the website, offering an
+                                    overview
+                                    of what the site has to offer. The Home page sets the tone and style for the overall
+                                    user experience.<br>
+
+                                    <br>Forum: This interactive feature allows members to engage in discussions, share
+                                    ideas, and ask questions. It's a space for community interaction, where users can
+                                    participate in threads, comment on posts, and connect with others who share similar
+                                    interests.<br>
+
+                                    <br>About Us: This section provides detailed information about the people behind the
+                                    website or organization. It includes biographies, photos, and roles of key
+                                    members or contributors.<br>
+
+                                    <br>*Website General Style: Aline is responsible for the overall aesthetic and
+                                    stylistic coherence of the website. This includes the design elements such as color
+                                    schemes,
+                                    typography, layout, and branding consistency.<br>
+                                </p>
                             </div>
                         </div>
                         <div class="image-box">
@@ -108,14 +130,12 @@
                                     unfortunately or not, not one of them. I love Ireland and all the rest of Europe and
                                     wish to travel through all the countries I can. I do not care for warm weather and
                                     beaches, preferring much more the cold and occasional rain of the Emerald Isles. I
-                                    am
-                                    currently studying Computing Science, which is, of course, a fascinating field,
-                                    however,
-                                    I am still not entirely sure this is what I want to do for life; my aspiration has
+                                    am currently studying Computing Science, which is, of course, a fascinating field,
+                                    however, I am still not entirely sure this is what I want to do for life; my
+                                    aspiration has
                                     always been to be part of the academic world, lecturing on high level education
                                     institutions, being a scholar, and I am not as well versed in technology as someone
-                                    my
-                                    age should be, though I have a good enough grasp of the concepts seen in class so
+                                    my age should be, though I have a good enough grasp of the concepts seen in class so
                                     far.<br>
                                     <br>For my free time and leisure, I am not for drinking and dancing, rather playing
                                     games with friends or simply going somewhere to talk and make jokes. I would say my
@@ -123,11 +143,26 @@
                                     Masquerade; there are dozens of books, comic books and electronic games about this
                                     universe, and honestly there are few things that entertain me as much as this.<br>
                                     <br>I am someone who doesn't like to have many friends, but a selected few with whom
-                                    I
-                                    feel extremely comfortable. I may be difficult to deal with sometimes, some of my
+                                    I feel extremely comfortable. I may be difficult to deal with sometimes, some of my
                                     friends complain when I don't take things seriously, or make too many jokes, and I
                                     appreciate having people to bring me back to reality when my mind wanders too
                                     far.<br>
+                                </p>
+                                <h2>Responsibilities</h2>
+                                <h3>Pages and related CSS/JS</h3>
+                                <p>
+                                    <br>Events: This section provides information about upcoming events organized by the
+                                    club or organization. It may include details such as event dates, locations,
+                                    descriptions, and how to participate. It serves as a central hub for members and
+                                    visitors to stay informed about scheduled activities and gatherings.<br>
+
+                                    <br> Quiz: The Quiz feature allows users to engage with interactive content,
+                                    related to movies. It offers a fun way to test knowledge. There is also a gallery os
+                                    us on events.<br>
+
+                                    <br> Contact: This section provides contact information and a form for users to
+                                    reach out to the club or organization. It typically includes details like email
+                                    addresses, and a message form.<br>
                                 </p>
                             </div>
                         </div>
@@ -158,6 +193,23 @@
                                     with
                                     friends. I love the entertainment world, and one of my dreams is to work with film
                                     productions. I believe I will do so someday in the future.<br>
+                                </p>
+                                <h2>Responsibilities</h2>
+                                <h3>Pages and related CSS/JS</h3>
+                                <p>
+                                    <br>About the Club: This page provides an overview of the club's mission, history,
+                                    values, and key members. It's designed to give visitors a clear understanding of
+                                    what the club stands for and what it offers.<br>
+
+                                    <br>News: The News section keeps members and visitors updated on the latest
+                                    happenings
+                                    within the club and the new movies. It include announcements, press releases, and
+                                    updates. This function ensures that the audience stays informed about relevant
+                                    developments and club activities.<br>
+
+                                    <br>Top 10: This feature likely showcases lists such as top 10 movies. It serves as
+                                    a highlight reel, drawing attention to notable aspects of the movie club. The Top 10
+                                    section can engage users by providing curated and easily digestible content.<br>
                                 </p>
                             </div>
                         </div>
