--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             movies. Our community is all about sharing opinions, engaging in discussions, and diving
                             deep into the eerie world of horror cinema. Whether you're a fan of classic horrors or
                             modern thrillers, you'll find a place here with us.</p>
-
+                        <!--Credit: Creepy Ghost Nun Walking Looking at the Camera on Mixkit-->
                         <video autoplay muted loop id="myVideo">
                             <source
                                 src="./Videos/mixkit-creepy-ghost-nun-walking-looking-at-the-camera-41759-hd-ready.mp4"
