--- a/Pages/News.html
+++ b/Pages/News.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Movie Club</title>
     <link rel="stylesheet" href="../Styles/style.css">
-    <link rel="stylesheet" href="../Styles/three.css">
+    <link rel="stylesheet" href="../Styles/top.css">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 
