fixed other images

--- a/Pages/Quiz.html
+++ b/Pages/Quiz.html
@@ -120,10 +120,10 @@
             <img src="../Images/images-quiz/aline-catwoman.jpeg" alt="Aline dressed as catwoman">
         </div>
         <div class="gallery-item">
-            <img src="../Images/images-quiz/aline-sergio-catwoman:zombie.jpeg" alt="Aline as catwoman stepping on Sergio, who is dressed as a zombie">
+            <img src="../Images/images-quiz/aline-sergio-catwoman_zombie.jpeg" alt="Aline as catwoman stepping on Sergio, who is dressed as a zombie">
         </div>
         <div class="gallery-item">
-            <img src="../Images/images-quiz/aline-sergio:evilpeterpan.jpeg" alt="Sergio as Peter Pan and Aline as Wendy, in a twisted version of the original story">
+            <img src="../Images/images-quiz/aline-sergio_evilpeterpan.jpeg" alt="Sergio as Peter Pan and Aline as Wendy, in a twisted version of the original story">
         </div>
         <div class="gallery-item">
             <img src="../Images/images-quiz/group-fantasy.jpeg" alt="group in costume">
@@ -138,7 +138,7 @@
             <img src="../Images/images-quiz/sergio-zombie.jpeg" alt="Sergio dressed as a zombie">
         </div>
         <div class="gallery-item">
-            <img src="../Images/images-quiz/zombie:freddie_krueger.jpeg" alt="Sergio as a zombie, man as Freddie Krueger and frightened woman in the middle">
+            <img src="../Images/images-quiz/zombie/freddie_krueger.jpeg" alt="Sergio as a zombie, man as Freddie Krueger and frightened woman in the middle">
         </div>
         <div class="gallery-item">
             <img src="../Images/images-quiz/sergio-frankenstein.jpeg" alt="Sergio dressed as the Frankenstein monster">
