--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                     <h2>The Top 10 Movies</h2>
                     <div class="responsive">
                         <div class="gallery">
-                            <a target="_blank" href="img_5terre.jpg">
-                                <img src="img_5terre.jpg" alt="The Conjuring">
+                            <a target="_blank" href="./Images/the-conjuring-768x1136.jpg">
+                                <img src="./Images/the-conjuring-768x1136.jpg" alt="The Conjuring">
                             </a>
                             <div class="description">The Conjuring</div>
                         </div>
@@ -68,17 +68,17 @@
 
                     <div class="responsive">
                         <div class="gallery">
-                            <a target="_blank" href="img_forest.jpg">
-                                <img src="img_forest.jpg" alt="It - The Thing (2017)">
+                            <a target="_blank" href="./Images/it2.jpg">
+                                <img src="./Images/it2.jpg" alt="It - The Thing">
                             </a>
-                            <div class="description">It - The Thing (2017)</div>
+                            <div class="description">It - The Thing</div>
                         </div>
                     </div>
 
                     <div class="responsive">
                         <div class="gallery">
-                            <a target="_blank" href="img_lights.jpg">
-                                <img src="img_lights.jpg" alt="His House">
+                            <a target="_blank" href="./Images/His_House_.webp">
+                                <img src="./Images/His_House_.webp" alt="His House">
                             </a>
                             <div class="description">His House</div>
                         </div>
@@ -86,8 +86,8 @@
 
                     <div class="responsive">
                         <div class="gallery">
-                            <a target="_blank" href="img_mountains.jpg">
-                                <img src="img_mountains.jpg" alt="Drag me to Hell">
+                            <a target="_blank" href="./Images/drag me to hell.jpg">
+                                <img src="./Images/drag me to hell.jpg" alt="Drag me to Hell">
                             </a>
                             <div class="description">Drag me to Hell</div>
                         </div>
