--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -1,76 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+          crossorigin="anonymous"/>
     <title>Movie Club</title>
     <link rel="stylesheet" href="../Styles/style.css">
     <link rel="stylesheet" href="../Styles/contact.css">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-
 <body>
-    <!-- Main container for the entire page -->
-    <div id="container">
-        <!-- Header section -->
-        <header id="masthead">
-            <div id="logo">
-                <a href="../index.html"><img src='../Images/nigth_web.png'
-                    alt="logo club nigth web"></a>
-            </div>
-            <!-- Navigation menu -->
-            <nav class="navbar">
-                <div class="hamburger-menu">
-                    <div class="bar"></div>
-                    <div class="bar"></div>
-                    <div class="bar"></div>
-                </div>
-                <ul class="menu">
-                    <li><a href="../Index.html">Home</a></li>
-                    <li><a href="../Pages/AboutPage.html">About the Club</a></li>
-                    <li><a href="../Pages/News.html">News</a></li>
-                    <li><a href="../Pages/Overview.html">Overview</a></li>
-                    <li><a href="../Pages/TopTen.html">Top 10 Films</a></li>
-                    <li><a href="../Pages/Events.html">Events</a></li>
-                    <li><a href="../Pages/Forum.html">Forum</a></li>
-                    <li><a href="../Pages/AboutUs.html">About Us</a></li>
-                    <li><a href="../Pages/contact.html">Contact Us</a></li>
-                </ul>
-            </nav>
-        </header>
-        <div class="content">
-
-            <h2>Leave us a message:</h2>
-
-            <form id="contct-form" method="POST" action="sendmail.php">
-                <div class="form-row form-error" style="display:none;"></div>
-                <div class="form-row">
-                    <label for="contact-form-name">Name: </label>
-                    <input id="contact-form-name" class="form-input" type="text" name="name" required>
-                </div>
-                <div class="form-row">
-                    <label for="contact-form-email">Email: </label>
-                    <input id="contact-form-email" class="form-input" type="email" name="email" required>
-                </div>
-                <div class="form-row">
-                    <label for="contact-form-phone">Phone: </label>
-                    <input id="contact-form-phone" class="form-input" type="tel" name="phone">
-                </div>
-                <div class="form-row">
-                    <label for="contact-form-message">Message: </label>
-                    <textarea id="contact-form-message" class="form-input" name="message" required></textarea>
-                </div>
-                <button type="submit">Submit</button>
-            </form>
-
-            <!-- Footer section -->
-            <footer>
-                <p>&copy; 2024 Designed by Aline - 3144929 | Eros - 3151957 | Sergio - 3139115</p>
-                <a href="../Pages/contact.html">Contact Us</a>
-            </footer>
+<!-- Main container for the entire page -->
+<div id="container">
+    <!-- Header section -->
+    <header id="masthead">
+        <div id="logo">
+            <a href="../index.html"><img src='../Images/nigth_web.png'
+                                         alt="logo club nigth web"></a>
         </div>
-    <script src="../JavaScript/script.js"></script>
-    <script src="../JavaScript/contact.js"></script>
+        <!-- Navigation menu -->
+        <nav class="navbar">
+            <div class="hamburger-menu">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
+            <ul class="menu">
+                <li><a href="../Index.html">Home</a></li>
+                <li><a href="../Pages/AboutPage.html">About the Club</a></li>
+                <li><a href="../Pages/News.html">News</a></li>
+                <li><a href="../Pages/Overview.html">Overview</a></li>
+                <li><a href="../Pages/TopTen.html">Top 10 Films</a></li>
+                <li><a href="../Pages/Events.html">Events</a></li>
+                <li><a href="../Pages/Forum.html">Forum</a></li>
+                <li><a href="../Pages/AboutUs.html">About Us</a></li>
+                <li><a href="../Pages/contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="content">
+
+        <h2>Leave us a message:</h2>
+
+        <div class="row">
+            <div class="col align-self-center">
+                <!-- contact form -->
+                <form id="myForm">
+                    <!-- name -->
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input
+                                type="name"
+                                name="name"
+                                class="form-control"
+                                id="name"
+                                placeholder="enter your name"
+                        />
+                    </div>
+
+                    <!-- email -->
+                    <div class="form-group">
+                        <label for="email">Email address</label>
+                        <input
+                                type="email"
+                                name="email"
+                                class="form-control"
+                                id="email"
+                                placeholder="enter your email"
+                        />
+                    </div>
+
+                    <!-- subject -->
+                    <div class="form-group">
+                        <label for="subject">Subject</label>
+                        <input
+                                type="text"
+                                name="subject"
+                                class="form-control"
+                                id="subject"
+                                placeholder="enter email subject"
+                        />
+                    </div>
+
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea class="form-control" id="message" name="message" rows="5"></textarea>
+                    </div>
+
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!-- bootstrap js -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha384-ZvpUoO/+P1c0e+s0B1lb5o86IBQzMwpLPZ8aIk5zn0QFtrrQXNTPd/Gr5e+eB1Rk"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+            crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+
+    <script type="text/javascript">
+        (function () {
+            emailjs.init("QFpg2OfJLhSLoNGc0");
+        })();
+    </script>
+
+    <script>
+        // listen to the form submission
+        document.getElementById("myForm").addEventListener("submit", function (event) {
+            event.preventDefault();
+
+            const serviceID = "service_3zkhhbh";
+            const templateID = "template_pi9mzlu";
+
+            // send the email here
+            emailjs.sendForm(serviceID, templateID, this).then(
+                (response) => {
+                    console.log("SUCCESS!", response.status, response.text);
+                    alert("SUCCESS!");
+                },
+                (error) => {
+                    console.log("FAILED...", error);
+                    alert("FAILED...", error);
+                }
+            );
+        });
+    </script>
+
+    <!-- Footer section -->
+    <footer>
+        <p>&copy; 2024 Designed by Aline - 3144929 | Eros - 3151957 | Sergio - 3139115</p>
+        <a href="../Pages/contact.html">Contact Us</a>
+    </footer>
 </div>
+<script src="../JavaScript/script.js"></script>
+<script src="../JavaScript/contact.js"></script>
 </body>
 </html>
