--- a/Pages/Forum.html
+++ b/Pages/Forum.html
@@ -56,7 +56,7 @@
         <!-- Footer section -->
         <footer>
             <p>&copy; 2024 Designed by Aline - 3144929 | Eros - 3151957 | Sergio - 3139115</p>
-            <a href="../Pages/contact.html">Contact Us</a>
+            <a href="../Pages/contact.html">&#9993; Contact Us</a>
         </footer>
     </div>
     <script src="../JavaScript/script.js"></script>
