--- a/Pages/AboutPage.html
+++ b/Pages/AboutPage.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Movie Club</title>
     <link rel="stylesheet" href="../Styles/style.css">
-    <link rel="stylesheet" href="../Styles/three.css">
+    <link rel="stylesheet" href="../Styles/top.css">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 
@@ -41,7 +41,7 @@
             <main>
                 <section class="about-section">
                     <h2>Welcome to NightWeb - Horror Movie Club</h2>
-                    <img src="../Images/hellfire.png" alt="poster-news" width="750" height="500">
+                    <img src="../Images/team.jpg" alt="Members of the club">
 
 
                     <p>Welcome to Night Web, a unique horror movie club that offers more than just movie discussions. We
@@ -77,7 +77,7 @@
             <!-- Footer section -->
             <footer>
                 <p>&copy; 2024 Designed by Aline - 3144929 | Eros - 3151957 | Sergio - 3139115</p>
-                <a href="../Pages/contact.html">Contact Us</a>
+                <a href="../Pages/contact.html">&#9993; Contact Us</a>
             </footer>
         </div>
         <script src="../JavaScript/script.js"></script>
