fixed flex problems on css

--- a/Pages/Events.html
+++ b/Pages/Events.html
@@ -40,6 +40,12 @@
         <div class="content">
 
             <main>
+
+                <section id="participate">
+                    <h2>Want to Participate?</h2>
+                    <p>If any of the events interest you, please contact us and give us your details so we know we can count on your presence!</p></br>
+                    <p><a href="../Pages/contact.html">Contact Us</a></p></br>
+                </section>
                 <section id="events">
                     <h2>Upcoming Events</h2>
 
@@ -86,7 +92,13 @@
                     </div>
                 </section>
 
+                <section id="map">
+                    <h2>Club Headquarters</h2>
+                    <img src="../Images/map-to-college.png" alt="a map giving directions to Griffith College Cork">
+                    <p>Griffith College Cork, Wellington Road, Cork, Co. Cork, T23 DF3A</p>
+                </section>
             </main>
+                
             <!-- Footer section -->
             <footer>
                 <p>&copy; 2024 Designed by Aline - 3144929 | Eros - 3151957 | Sergio - 3139115</p>
