fixed the contacts page

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -11,7 +11,7 @@
 
 <body>
     <!-- Main container for the entire page -->
-    <div id="container">
+    <div id="container" class="main-container">
         <!-- Header section -->
         <header id="masthead">
             <div id="logo">
@@ -46,7 +46,7 @@
                     <div class="row">
                         <div class="col align-self-center">
                             <!-- contact form -->
-                            <form id="myForm">
+                            <form id="myForm" class="styled-form">
                                 <!-- name -->
                                 <div class="form-group">
                                     <label for="name">Name</label>
@@ -74,32 +74,50 @@
                             </form>
                         </div>
                     </div>
+                    <section id="contact-devs">
+                        <div class="flip-card">
+                            <div class="flip-card-inner">
+                              <div class="flip-card-front">
+                                <img src="../Images/Aline.jpg" alt="Photo of Aline">
+                              </div>
+                              <div class="flip-card-back">
+                                <h1>Aline Andrade</h1>
+                                <p>Founding Member</p>
+                                <p>aline.andradecosta@student.griffith.ie</p>
+                                <p><a href="mailto:aline.andradecosta@student.griffith.ie">Contact Us</a></p>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="flip-card">
+                            <div class="flip-card-inner">
+                              <div class="flip-card-front">
+                                <img src="../Images/Eros.jpg" alt="Photo of Eros">
+                              </div>
+                              <div class="flip-card-back">
+                                <h1>Eros Coelho</h1>
+                                <p>Founding Member</p>
+                                <p>eros.limacoelho@student.griffith.ie</p>
+                                <p><a href="mailto:eros.limacoelho@student.griffith.ie">Contact Us</a></p>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="flip-card">
+                            <div class="flip-card-inner">
+                              <div class="flip-card-front">
+                                <img src="../Images/Sergio.jpg" alt="Photo of Sergio">
+                              </div>
+                              <div class="flip-card-back">
+                                <h1>Sergio Alves</h1>
+                                <p>Founding Member</p>
+                                <p>sergio.alvesdasilva@student.griffith.ie</p>
+                                <p><a href="mailto:sergio.alvesdasilva@student.griffith.ie">Contact Us</a></p>
+                              </div>
+                            </div>
+                          </div>
+                    </section>
                 </main>
             </div>
            
-            <section id="contact-devs">
-                <div class="card">
-                    <h3>Aline Andrade</h3>
-                    <p class="title">Founding Member</p>
-                    <p>Griffith College Cork</p>
-                    <p>aline.andradecosta@student.griffith.ie</p>
-                    <p><a href="mailto:aline.andradecosta@student.griffith.ie">Contact</a></p>
-                </div>
-                <div class="card">
-                    <h3>Eros Coelho</h3>
-                    <p class="title">Founding Member</p>
-                    <p>Griffith College Cork</p>
-                    <p>eros.limacoelho@student.griffith.ie</p>
-                    <p><a href="mailto:eros.limacoelho@student.griffith.ie">Contact</a></p>
-                </div>
-                <div class="card">
-                    <h3>Sergio Alves</h3>
-                    <p class="title">Founding Member</p>
-                    <p>Griffith College Cork</p>
-                    <p>sergio.alvesdasilva@student.griffith.ie</p>
-                    <p><a href="mailto:sergio.alvesdasilva@student.griffith.ie">Contact</a></p>
-                </div>
-            </section>
         </div>
 
         <!-- Footer section -->
