--- a/Pages/TopTen.html
+++ b/Pages/TopTen.html
@@ -51,23 +51,27 @@
                         </a>
                         <h5>Watch the Trailer!</h5>
                         <section class="about-news">
-
-                            <p>The Conjuring is one of the scariest films of all time. Let's revisit the horrors behind
+                            <p>The Conjuring is one of the scariest films of all time. Let's revisit the horrors
+                                behind
                                 this macabre and frightening story.
-                                Ed and Lorraine Warren are famous paranormal investigators who have confronted several
+                                Ed and Lorraine Warren are famous paranormal investigators who have confronted
+                                several
                                 supernatural cases and are seeking their respective solutions. This story brings to
-                                light the Perron family who are being terrorized by a demonic entity and ask the couple
+                                light the Perron family who are being terrorized by a demonic entity and ask the
+                                couple
                                 for help to get rid of this problem before the worst happens.<br>
 
 
                                 <br>CURIOSITIES:<br>
                                 - The Warren couple and the events are real, they are both deceased but they had a
                                 daughter who has the same gifts as her mother.
-                                <br>- The couple has explored more than 4 thousand supernatural cases since the 1950s.
+                                <br>- The couple has explored more than 4 thousand supernatural cases since the
+                                1950s.
                                 <br>- Eight generations had lived and died in the residence with approximately 80
                                 thousand hectares of land, all deaths occurred in terrible circumstances marked by
                                 murders, rapes and suicides.
-                                <br>- The situation in the house worsened when the spirit of Bathsheba Sherman tortured
+                                <br>- The situation in the house worsened when the spirit of Bathsheba Sherman
+                                tortured
                                 and possessed the body of the Perron family's mother. Bathsheba was supposedly a
                                 Satanist witch who killed a baby and hanged herself behind the barn.
                                 <br>- One of the Perron daughters supported the production of the film by telling us
@@ -75,9 +79,11 @@
                                 relation to what the family really suffered.
                                 <br>- Some people from the film's production reported some kind of supernatural
                                 experience and even Lorraine Warren herself who was there said this too.
-                                <br>- At the end of the film Lorraine tells Ed that a priest called for the two of them
+                                <br>- At the end of the film Lorraine tells Ed that a priest called for the two of
+                                them
                                 to check out a case on Long Island which, interestingly enough, is the terrible
-                                Amityville house whose story is briefly told at the beginning of "The Conjuring 2".<br>
+                                Amityville house whose story is briefly told at the beginning of "The Conjuring
+                                2".<br>
                                 <br>Director: James Wan.<br>
                                 Year: 2013.<br>
                                 Duration: 1h 52m.<br>
@@ -93,17 +99,18 @@
                                 HBO Max
                             </p>
 
+
                             <h4>Night Web Rating</h4>
                             <div class="star-rating">
-                                <input type="radio" id="5-stars" name="rating" value="5" />
+                                <input type="radio" id="5-stars" name="rating" value="5">
                                 <label for="5-stars" class="star">&#9733;</label>
-                                <input type="radio" id="4-stars" name="rating" value="4" />
+                                <input type="radio" id="4-stars" name="rating" value="4">
                                 <label for="4-stars" class="star">&#9733;</label>
-                                <input type="radio" id="3-stars" name="rating" value="3" />
+                                <input type="radio" id="3-stars" name="rating" value="3">
                                 <label for="3-stars" class="star">&#9733;</label>
-                                <input type="radio" id="2-stars" name="rating" value="2" />
+                                <input type="radio" id="2-stars" name="rating" value="2">
                                 <label for="2-stars" class="star">&#9733;</label>
-                                <input type="radio" id="1-star" name="rating" value="1" />
+                                <input type="radio" id="1-star" name="rating" value="1">
                                 <label for="1-star" class="star">&#9733;</label>
                             </div>
 
@@ -115,11 +122,16 @@
                                 <div class="video-icon"></div>
                             </a>
                             <h5>Watch the Trailer!</h5>
-                            <p>"It" is a film adaptation of Stephen King's terrifying novel. It brings to life the story
-                                of a group of children in the town of Derry, Maine, who are haunted by an evil entity
-                                that takes the form of a clown named Pennywise. As the kids face their deepest fears,
-                                they uncover the town's dark history and must band together to confront the evil that
-                                lurks beneath. Blending horror and coming-of-age elements, "It" offers a gripping and
+                            <p>"It" is a film adaptation of Stephen King's terrifying novel. It brings to life the
+                                story
+                                of a group of children in the town of Derry, Maine, who are haunted by an evil
+                                entity
+                                that takes the form of a clown named Pennywise. As the kids face their deepest
+                                fears,
+                                they uncover the town's dark history and must band together to confront the evil
+                                that
+                                lurks beneath. Blending horror and coming-of-age elements, "It" offers a gripping
+                                and
                                 chilling experience that will leave you both scared and captivated.<br>
                                 <br>Director: Andy Muschietti.<br>
                                 Year: 2017.<br>
@@ -189,10 +201,14 @@
                             </a>
                             <h5>Watch the Trailer!</h5>
                             <p>It introduces us to a family where one of the couple's children suffers a strange
-                                accident and falls into a coma. Still, we discover that the boy is in another dimension
-                                full of bizarre and perverse creatures, thirsty for the boy's soul, while his family on
-                                the real plane realises something is wrong, and he races against time to save his son
-                                from the "unknown". Chapter 2 follows the same narrative line and brings us solutions,
+                                accident and falls into a coma. Still, we discover that the boy is in another
+                                dimension
+                                full of bizarre and perverse creatures, thirsty for the boy's soul, while his family
+                                on
+                                the real plane realises something is wrong, and he races against time to save his
+                                son
+                                from the "unknown". Chapter 2 follows the same narrative line and brings us
+                                solutions,
                                 mysteries revealed and more bizarre creatures. Concluding this story excellently and
                                 scarily!!!<br>
                                 <br>Director: Insidious 1 and 2 - James Wan.<br>
@@ -225,12 +241,17 @@
                                 <div class="video-icon"></div>
                             </a>
                             <h5>Watch the Trailer!</h5>
-                            <p>A young banker is looking to move up in her job and to impress her boss, she refuses to
+                            <p>A young banker is looking to move up in her job and to impress her boss, she refuses
+                                to
                                 extend the payment deadline for the instalments on a house she had previously owned,
-                                "innocent lady", but little did she know that she was dealing with an old woman gipsy
-                                who decides to take revenge, after the treatment that the girl had given her at the bank
-                                and as a result of which the young woman will have to run after her to prevent a curse
-                                from condemning her soul once and for all in the depths of hell. Sam Raimi, director of
+                                "innocent lady", but little did she know that she was dealing with an old woman
+                                gipsy
+                                who decides to take revenge, after the treatment that the girl had given her at the
+                                bank
+                                and as a result of which the young woman will have to run after her to prevent a
+                                curse
+                                from condemning her soul once and for all in the depths of hell. Sam Raimi, director
+                                of
                                 the "Evil Dead" franchise films released in the 80s, shows again in this scary story
                                 that he is an excellent director of horror films and surprises us with his unique,
                                 surprising and fun style. You won't regret watching it, I guarantee it!<br>
@@ -267,11 +288,14 @@
                             </a>
 
                             <h5>Watch the Trailer!</h5>
-                            <p>"Evil Dead Rise" This film takes the beloved Evil Dead franchise to new heights with a
+                            <p>"Evil Dead Rise" This film takes the beloved Evil Dead franchise to new heights with
+                                a
                                 fresh and terrifying story set in an urban environment. When a reunion between two
                                 estranged sisters is disrupted by discovering a mysterious book, they inadvertently
-                                unleash a demonic force that wreaks havoc in their high-rise apartment building. With
-                                relentless scares, gruesome effects, and intense action, "Evil Dead Rise" reinvents the
+                                unleash a demonic force that wreaks havoc in their high-rise apartment building.
+                                With
+                                relentless scares, gruesome effects, and intense action, "Evil Dead Rise" reinvents
+                                the
                                 horror classic for a new generation while honouring its roots. Get ready for a
                                 terrifying ride that will keep you gripping the edge of your seat.<br>
                                 <br>Director: Lee Cronin.<br>
@@ -305,10 +329,13 @@
                             </a>
 
                             <h5>Watch the Trailer!</h5>
-                            <p>We recommend a film that won't let you sleep peacefully tonight. The film occurs during
+                            <p>We recommend a film that won't let you sleep peacefully tonight. The film occurs
+                                during
                                 the pandemic when friends decide to hold a séance via video call. But something goes
-                                wrong, and they soon begin to be threatened by an evil entity, experiencing moments of
-                                great terror in their homes. New and captivating actors lead the cast. Watch this horror
+                                wrong, and they soon begin to be threatened by an evil entity, experiencing moments
+                                of
+                                great terror in their homes. New and captivating actors lead the cast. Watch this
+                                horror
                                 movie!!!<br>
                                 <br>Director: Rob Savage.<br>
                                 Year: 2020.<br>
@@ -342,12 +369,17 @@
 
                             <h5>Watch the Trailer!</h5>
 
-                            <p>It all starts with an author of crime novels who moves with his family to a new house,
-                                there he finds a box with old and very strange footage that seems to be produced by some
-                                serial killer, but when he investigates this story further, he He begins to understand
-                                that something evil is behind those films, putting his life and that of his family at
+                            <p>It all starts with an author of crime novels who moves with his family to a new
+                                house,
+                                there he finds a box with old and very strange footage that seems to be produced by
+                                some
+                                serial killer, but when he investigates this story further, he He begins to
+                                understand
+                                that something evil is behind those films, putting his life and that of his family
+                                at
                                 risk. This film is really scary and will leave you impressed with some disturbing
-                                scenes. And according to specialized scientists, "this film is considered the scariest
+                                scenes. And according to specialized scientists, "this film is considered the
+                                scariest
                                 of all time." So will you have the courage to watch it?".<br>
                                 <br>Director: Scott Derrickson.<br>
                                 Year: 2012.<br>
@@ -380,11 +412,16 @@
                             </a>
                             <h5>Watch the Trailer!</h5>
 
-                            <p>This indication takes us to a zombie pandemic in South Korea, where an unknown virus is
-                                dragging a wave of terror across the country. A father and his daughter seek to survive
-                                this chaos and board a train, which promises to take them to a safe place that has not
-                                been affected by the virus yet, but the journey will not be as smooth as it seems and
-                                difficult decisions will have to be made. Embark on this incredible story about survival
+                            <p>This indication takes us to a zombie pandemic in South Korea, where an unknown virus
+                                is
+                                dragging a wave of terror across the country. A father and his daughter seek to
+                                survive
+                                this chaos and board a train, which promises to take them to a safe place that has
+                                not
+                                been affected by the virus yet, but the journey will not be as smooth as it seems
+                                and
+                                difficult decisions will have to be made. Embark on this incredible story about
+                                survival
                                 and hard choices and prepare to be amazed by this great film about zombies!!!<br>
                                 <br>Director: Yeon Sang-Ho.<br>
                                 Year: 2016.<br>
@@ -419,16 +456,20 @@
                                 <div class="video-icon"></div>
                             </a>
                             <h5>Watch the Trailer!</h5>
-                            <p>After the death of their grandmother, a family begins to discover strange connections and
-                                a bizarre story behind the family tree, where this triggers traumatic and frightening
-                                moments, affecting each member in a particular and frighteningly disturbing way. It's an
+                            <p>After the death of their grandmother, a family begins to discover strange connections
+                                and
+                                a bizarre story behind the family tree, where this triggers traumatic and
+                                frightening
+                                moments, affecting each member in a particular and frighteningly disturbing way.
+                                It's an
                                 atypical film of its genre, but it will leave you with chills down your spine.<br>
                                 <br>Director: Ari Aster.<br>
                                 Year: 2018.<br>
                                 Duration: 2h 7m.<br>
                                 Rotten Tomatoes reviews: 89%.<br>
                                 References: Exorcist, The Witch, Suspiria.<br>
-                                Recommendation: You are not prepared for what you are going to watch and keep an eye on
+                                Recommendation: You are not prepared for what you are going to watch and keep an eye
+                                on
                                 the details.
                                 Available: Amazon Prime.
                             </p>
@@ -448,9 +489,9 @@
                             </div>
                         </section>
                     </div>
-                    <button onclick="topFunction()" id="myBottonTop" title="Go to top">Top</button>
                 </section>
             </main>
+            <button onclick="topFunction()" id="myBottonTop" title="Go to top">Top</button>
             <!-- Footer section -->
             <footer>
                 <p>&copy; 2024 Designed by Aline - 3144929 | Eros - 3151957 | Sergio - 3139115</p>
